# pos-be

./: .env.example  .gitignore  .htaccess.example  AI_PROMPTS.md  Cargo.toml  DEBUG_CHECKLIST.md  DEVELOPMENT_GUIDE.md  Dockerfile  QUICK_START.md  README.md  SWAGGER_DOCS.md  add-to-sales-cart.php  check_code.sh  cors.php  create-product.php  create-sales-order.php  db.php  delete-product.php  delete-sales-cart-item.php  dev.sh  docker-compose.yml  get-product.php  get-products.php  get-sales-cart.php  get-token.php  get-user.php  index.php  response.php  rustfmt.toml  update-product.php  update-sales-cart-item.php
.cargo/: config.toml
.github/workflows/: prod.yml
modules/: index.php
modules/auth/: get-token.php  get-user-data-by-token.php  get-user-stores.php  index.php
modules/cart/: delete-sales-cart-item.php  edit-sales-cart-item.php  get-sales-cart-data.php  upsert-item-to-sales-cart.php
modules/product/: delete-product-by-id.php  find-product-by-id.php  insert-new-product.php  search-products.php  update-product-by-id.php
scripts/: deploy.sh
src/: errors.rs  lib.rs  main.rs
src/db/: schema.rs
src/db_migration/: 001_initial_db.sql
src/docs/: mod.rs  schemas.rs
src/errors/: mod.rs
src/handlers/: auth.rs  debug.rs  migration.rs  mod.rs  product.rs  sales.rs  user.rs
src/middleware/: auth.rs  extract_auth.rs  mod.rs  skip_auth.rs
src/models/: app_state.rs  auth.rs  mod.rs  product.rs  response.rs  sales.rs  user.rs
src/routes/: auth.rs  debug.rs  health.rs  migration.rs  mod.rs  orders.rs  products.rs  sales.rs  user.rs
src/services/: auth.rs  db_service.rs  error_handler.rs  google_auth.rs  mod.rs  product_service.rs  sales_service.rs  user_service.rs
