[package]
name = "pos-be"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
actix-web = "4.3"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = "8.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.28", features = ["full"] }
oauth2 = "4.4"
log = "0.4"
env_logger = "0.10"
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
