[package]
name = "pos-be"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid", "rust_decimal"] }
actix-web = "4.3"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = "8.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.28", features = ["full"] }
oauth2 = "4.4"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["serde", "v4"] }
futures = "0.3"
time = "0.3"  # Added time crate for Cookie Duration
rust_decimal = { version = "1.30", features = ["serde"] }
